# AgentNeo

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dataset.csv  MANIFEST.in  README.md  ai_travel_agent.py  app.py  example.py  package.json  pyproject.toml  requirements.txt  sample.ipynb  setup.py  test_lar_metrics.ipynb  unit_testing.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
agentneo/: __init__.py  agentneo.py  dashboard.py  evaluation.py  network_tracer.py  tracer.py  utils.py
agentneo/assistant/: app.py
agentneo/configs/: model_costs.json
agentneo/data/: __init__.py  data_classes.py  data_models.py
agentneo/evaluation/: __init__.py  evaluation.py
agentneo/evaluation/metrics/: __init__.py  context_retention_rate.py  custom_evaluation_metric.py  custom_llm_judge.py  error_detection_rate.py  goal_decomposition_efficiency.py  goal_fulfillment_rate.py  learning_adaptability_rate.py  ragas_evaluation.py  ragchecker_evaluation.py  response_latency.py  tool_call_correctness_rate.py  tool_call_success_rate.py  tool_usage_efficiency.py
agentneo/execution/: __init__.py  execution.py
agentneo/execution/metrics/: plan_adaptibility.py  tool_metrics.py  tool_selection_accuracy.py
agentneo/llm_provider/: __init__.py  extract_provider_output.py
agentneo/server/: __init__.py  dashboard.py  dashboard_server.py  save_db_to_json.py
agentneo/tracing/: __init__.py  agent_tracer.py  base.py  llm_tracer.py  llm_utils.py  network_tracer.py  tool.py  tool_tracer.py  tracer.py  user_interaction_tracer.py  utils.py
agentneo/ui/: README.md  bun.lockb  index.html  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
agentneo/ui/public/: index.html
agentneo/ui/src/: App.css  App.js  App.tsx  index.css
agentneo/ui/src/api/: traceApi.ts
agentneo/ui/src/components/: AgentCalls.tsx  ChatWidget.tsx  CompleteTraceData.tsx  DateTimePicker.tsx  EvaluationDetails.tsx  EvaluationTable.tsx  ExecutionGraph.tsx  ExecutionGraphLayout.ts  ExecutionGraphLegend.tsx  ExecutionGraphNodes.tsx  ExecutionTimeline.tsx  InstalledPackages.tsx  ModeToggle.tsx  NodeDetailsPanel.tsx  Pagination.tsx  ProjectInformation.tsx  Sidebar.tsx  SidebarComponents.tsx  SimpleRadialBarChart.tsx  SystemInformation.tsx  ThemeProvider.tsx  TimelineContent.tsx  TimelineControls.tsx  TimelineDetails.tsx  TimelineEvents.tsx  TimelineLegend.tsx  (+17 more)
agentneo/utils/: __init__.py  generic.py  llm_guard.py  llm_utils.py  security_utils.py  trace_utils.py
agentneo/utils/security/: prompt_filtering.py
docs/content/: index.md
docs/content/contributing/: guidelines.md  pull-request.md  setup.md
docs/content/core_features/: architecture.md  basic-usage.md  components.md  guard-ussage.md  key-features.md
docs/content/developer-guide/: advanced-usage.md
docs/content/getting-started/: installation.md  overview.md  quick-start.md
docs/content/metrics/: configuration.md  overview.md  supported-metrics.md  updated-supported-metrics.md
docs/content/reference/: glossary.md
docs/content/releases/: breaking-changes.md  version-history.md
docs/content/troubleshooting/: common-issues.md  faq.md
examples/: AgentNeo_Arxiv.ipynb  AgentNeo_Code_Assistant.ipynb  FinancialAnalysisSystem.ipynb  Ollama_API_Test.ipynb  Recipe_Builder.ipynb  Study_guide.ipynb  TravelAdvisor.ipynb  TravelAdvisor.py  TravelPlanner.ipynb  Travel_Planner.ipynb  Travel_Planner1.ipynb  chatbot.ipynb  memory_profiling_test.py  sample_filtering.py  test_error_detection_rate.py  test_pinecone_db.py  test_response_latency_metric.py  travel_planner.ipynb
examples/AutoGen/: autogen_calculator.ipynb  autogen_groupchat.ipynb
examples/LangGraph/: Chatbot.ipynb  RecipeBuilder.ipynb  StudyGuide.ipynb
examples/OpenAISwarm/: AirlineMultiAgent.ipynb
examples/crewai/: DigitalMarketing.ipynb  MarketingStrategy.ipynb  Marketing_Strategy.ipynb  ResearcherAgent.ipynb  digital_marketing.ipynb
examples/swarm/: swarm_airline.ipynb
src/agentneo/: __init__.py  agent_neo.py  dataset.py  experiment.py  project.py  tracer.py
tests/: checking_inputs.json  example.json  test_agentneo.py  test_anthropic_tracing.py  test_context_retention_rate.py  test_groq_tracing.py  test_llm_guard.py  test_memory_profiling.py  test_ragas_evaluation.py  test_ragchecker_evalutation.py  test_response_latecy_metric.py  test_total_jailbreak_promts_models.py
tests/test_data/: test_data_classes.py
tests/test_evaluation_metrics/: test_custom_llm_judge.py
tests/test_utils/: test_security_utils.py  test_trace_utils.py
tests/tracing/: test_ollama_api_tracing.py
tests/vector/: test_pinecone_db.py
(+38 files in other folders)
