[project]
name = "agentneo"
version = "0.1.3.2"
authors = [
  { name="Kiran Scaria", email="kiran.scaria@raga.ai" },
]
description = "AgentNeo Python SDK"
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
]

dependencies = [
    "requests>=2.25.1",
    "langchain>=0.2.1",
    "requests-toolbelt~=1.0.0",
    "openai~=1.43.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" = "https://raga.ai"
"Bug Tracker" = "https://github.com/raga-ai-hub/agentneo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.metadata]
license-file = "LICENSE"