[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentneo"
version = "1.2.2"
description = "A powerful tracing library for monitoring and analyzing AI agents, LLM calls, and tool interactions."
authors = [
    { name = "Rehan Asif", email = "rehan.asif@raga.ai" },
    { name = "Kiran Scaria", email = "kiran.scaria@raga.ai" },
    { name = "Vijay Chaurasiya", email = "vijay.chaurasiya@raga.ai" }
]
license = { text = "GNU General Public License v3 (GPLv3)" }
readme = "README.md"
requires-python = ">=3.9"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlalchemy~=2.0.35",
    "psutil~=6.0.0",
    "py-cpuinfo~=9.0.0",
    "requests~=2.32.3",
    "GPUtil~=1.4.0",
    "wrapt~=1.16",
    "Flask~=3.0.2",
    "waitress~=2.1.2",
    "Flask-Cors~=4.0.1",
    "setuptools>=67",
    "litellm~=1.49.2",
    "openai~=1.51.2",
    "langchain~=0.2.16",
    "flask_caching~=2.3.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort"]

[project.urls]
"Homepage" = "https://github.com/raga-ai-hub/agentneo"
"Bug Tracker" = "https://github.com/raga-ai-hub/agentneo/issues"

[tool.setuptools.packages.find]
include = ["agentneo*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
agentneo = ["configs/model_costs.json"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
